--- a/src/components/LeaderCard/LeaderCard.module.scss
+++ b/src/components/LeaderCard/LeaderCard.module.scss
@@ -1,3 +1,23 @@
 @use "../../assets/styles/mixins" as *;
 @use "../../assets/styles/variables" as *;
 
+.leader-card {
+  height: 25vh;
+  width: auto;
+  background-color: rgba($color-secondary, 0.2);
+  color: $color-dark;
+  border-radius: 10px;
+  box-shadow: 2px 2px 10px 0px rgba(24,29,49,0.1);
+
+  &__image {
+    
+    height: 80%;
+    
+    img {
+      height: 100%;
+    }
+
+  }
+
+
+}
