--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,9 +4,32 @@
 .header {
   width: 100%;
   height: 25vh;
-  background-color: $color-dark;
+  background-color: $color-accent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 5px 0px rgba(12,12,12,0.25);
 
-  &__title {
-    color: $color-white;
+  &__text {
+    width: 80%;
+    height: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: left;
+    padding: 20px;
+    
+    &--title {
+      color: $color-white;
+      padding-bottom: 10px;
+      border-bottom: 1px solid $color-white;
+    }
+
+    &--desc {
+      color: $color-white;
+    }
   }
+
+
 }
