--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -4,7 +4,7 @@
 .header {
   width: 100%;
   height: 25vh;
-  background-color: $color-accent;
+  background-color: $color-secondary;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -19,16 +19,13 @@
     justify-content: space-evenly;
     text-align: left;
     padding: 20px;
+    color: $color-dark;
     
     &--title {
-      color: $color-white;
       padding-bottom: 10px;
-      border-bottom: 1px solid $color-white;
+      border-bottom: 1px solid $color-dark;
     }
-
-    &--desc {
-      color: $color-white;
-    }
+    
   }
 
 
