--- a/src/components/LeaderCard/LeaderCard.module.scss
+++ b/src/components/LeaderCard/LeaderCard.module.scss
@@ -8,6 +8,7 @@
   color: $color-dark;
   border-radius: 10px;
   box-shadow: 2px 2px 10px 0px rgba(24,29,49,0.1);
+  text-decoration: none;
 
   &__image {
     
