--- a/src/components/LeaderPage/LeaderPage.module.scss
+++ b/src/components/LeaderPage/LeaderPage.module.scss
@@ -31,17 +31,23 @@
 
   &__character {
     width: 80%;
-    
+
   }
 
   &__lists {
     width: 75%;
     height: auto;
-    column-count: 2;
-    
-    column-gap: 20px;
-    column-fill: auto;
-    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-start;
+
+    ul {
+      list-style: none;
+    }
+
+    li {
+      text-decoration: none;
+    }
 
   }
 }
