--- a/src/components/LeaderPage/LeaderPage.module.scss
+++ b/src/components/LeaderPage/LeaderPage.module.scss
@@ -5,6 +5,9 @@
   width: 100%;
   background-color: $color-secondary;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__heading {
     display: flex;
@@ -12,6 +15,8 @@
     justify-content: space-evenly;
     align-items: center;
     padding: 10px;
+    margin: 10px;
+    
     
     &--text {
       
@@ -26,12 +31,14 @@
   }
 
   img {
-    width: 75%;
+    width: 50%;
   }
 
   &__character {
-    width: 80%;
-
+    
+    padding: 10px;
+    margin: 10px;
+   
   }
 
   &__lists {
@@ -40,6 +47,7 @@
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
+    
 
     ul {
       list-style: none;
