leader page for mobile finished

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -11,5 +11,10 @@
 
 $color-white: #f2f1ee;
 $color-secondary: #dddddd;
-$color-accent: #678983;
+$color-accent: #888888;
 $color-dark: #0c0c0c;
+
+
+$breakpoint-tablet: 768px;
+$breakpoint-desktop: 1024px;
+$breakpoint-desktop-large: 1200px;
