--- a/src/components/LeaderPage/LeaderPage.module.scss
+++ b/src/components/LeaderPage/LeaderPage.module.scss
@@ -20,42 +20,79 @@
     
     &--text {
       
+      text-align: left;
+      border-bottom: 1px solid $color-accent;
+
+      &-title, &-quote, &-exemplar {
+        padding-bottom: 10px;
+      }
+
       &-title {
         font-size: 2rem;
       }
 
       &-quote {
         font-style: italic;
+        color: $color-accent;
+        font-weight: 400;
+      }
+    }
+
+    &--image {
+
+      img {
+        width: 50%;
+        border-radius: 10px;
+        
       }
     }
   }
 
-  img {
-    width: 50%;
-  }
 
   &__character {
     
     padding: 10px;
-    margin: 10px;
+    margin: 0 10px;
+    text-align: left;
+
+    &--title {
+      padding-bottom: 10px;
+    }
    
   }
 
   &__lists {
-    width: 75%;
+    width: 100%;
+    margin: 10px 0 0 0;
     height: auto;
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
+    background-color: $color-dark;
     
+    &--best, &--dark {
+      height: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 10px;
+      width: 45%;
+      text-align: left;
 
-    ul {
-      list-style: none;
+      h4 {
+        padding-bottom: 10px;
+      }
+
+      ul {
+        list-style: inside;
+      }
+  
+      li {
+        text-decoration: none;
+        padding-left: 10px;
+        color: $color-secondary;
+      }
     }
 
-    li {
-      text-decoration: none;
-    }
 
   }
 }
