--- a/src/components/LeaderPage/LeaderPage.module.scss
+++ b/src/components/LeaderPage/LeaderPage.module.scss
@@ -3,11 +3,22 @@
 
 .leader-page {
   width: 100%;
-  background-color: $color-secondary;
+  background-color: rgba($color-secondary, 0.75);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 2px 2px 10px 0px rgba(24,29,49,0.1);
+  position: relative;
+
+  &__cross {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
   &__heading {
     display: flex;
@@ -29,6 +40,7 @@
 
       &-title {
         font-size: 2rem;
+        text-shadow: 1px 1px 2px rgba($color-dark, 0.5);
       }
 
       &-quote {
@@ -36,6 +48,7 @@
         color: $color-accent;
         font-weight: 400;
       }
+
     }
 
     &--image {
@@ -68,28 +81,30 @@
     display: flex;
     justify-content: space-evenly;
     align-items: flex-start;
-    background-color: $color-dark;
+    // background-color: rgba($color-dark, 0.1);
     
     &--best, &--dark {
       height: 100%;
-      padding: 10px;
       margin: 10px 0;
       border-radius: 10px;
       width: 45%;
       text-align: left;
-
+      overflow: hidden;
+      
       h4 {
-        padding-bottom: 10px;
+        padding: 10px 0 10px 10px;
+        width: 100%;
       }
-
+      
       ul {
         list-style: inside;
+        padding: 10px;
       }
   
       li {
         text-decoration: none;
         padding-left: 10px;
-        color: $color-secondary;
+        color: $color-dark;
       }
     }
 
