--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgb(243,11,111);
-  background: linear-gradient(90deg, rgba(243,11,111,0.5) 10%, rgba(238,238,238,0.5) 50%, rgba(177,187,54,0.5) 82%);
+  background: transparent;
+  width: 100%;
+  min-height: 100vh;
 }
