--- a/src/components/LeaderPage/LeaderPageLists/LeaderPageLists.module.scss
+++ b/src/components/LeaderPage/LeaderPageLists/LeaderPageLists.module.scss
@@ -3,12 +3,16 @@
 
 .lists {
   width: 100%;
+  max-width: 1024px;
   margin: 10px 0 0 0;
   height: auto;
   display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
-  // background-color: rgba($color-dark, 0.1);
+  
+  @include desktop {
+    margin: 20px 0;
+  }
   
   &__best, &__dark {
     height: 100%;
@@ -17,6 +21,7 @@
     width: 45%;
     text-align: left;
     overflow: hidden;
+
     
     h4 {
       padding: 10px 0 10px 10px;
@@ -26,6 +31,7 @@
     ul {
       list-style: inside;
       padding: 10px;
+      background-color: rgba($color-dark, 0.1);
     }
 
     li {
@@ -33,6 +39,12 @@
       padding-left: 10px;
       color: $color-dark;
       font-size: 0.75rem;
+    }
+
+    h4, li {
+      @include desktop {
+        font-size: 1.5rem;
+      }
     }
   }
 
