--- a/src/components/LeaderCardList/LeaderCardList.module.scss
+++ b/src/components/LeaderCardList/LeaderCardList.module.scss
@@ -1,9 +1,7 @@
 @use "../../assets/styles/variables" as *;
 @use "../../assets/styles/mixins" as *;
 
-
 .leaders {
-
   width: 100%;
   max-width: 1200px;
   display: flex;
@@ -11,10 +9,16 @@
 
   &__grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    padding: 20px;
-    width: 80%;
-  
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 10px;
+    width: 100%;
+
+    @include tablet {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 20px;
+      padding: 20px;
+      width: 80%;
+    }
   }
 }
