--- a/src/components/LeaderCard/LeaderCard.module.scss
+++ b/src/components/LeaderCard/LeaderCard.module.scss
@@ -2,22 +2,40 @@
 @use "../../assets/styles/variables" as *;
 
 .leader-card {
-  height: 25vh;
+  height: 20vh;
   width: auto;
+  padding: 10px;
   background-color: rgba($color-secondary, 0.2);
   color: $color-dark;
   border-radius: 10px;
   box-shadow: 2px 2px 10px 0px rgba(24,29,49,0.1);
   text-decoration: none;
 
+  &:hover {
+    background-color: rgba($color-white, 0.5);
+  }
+
+  @include tablet {
+    height: 25vh;
+  }
+
   &__image {
     
-    height: 80%;
+    height: 75%;
+    margin-bottom: 10px;
     
     img {
       height: 100%;
     }
 
+  }
+
+  h1 {
+    font-size: 0.8rem;
+
+    @include tablet {
+      font-size: 1rem;
+    }
   }
 
 
