--- a/src/components/LeaderPage/LeaderPage.module.scss
+++ b/src/components/LeaderPage/LeaderPage.module.scss
@@ -20,6 +20,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    
   }
 
   &__heading {
@@ -27,7 +28,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     margin: 10px;
 
     @include desktop {
