--- a/src/components/LeaderCardList/LeaderCardList.module.scss
+++ b/src/components/LeaderCardList/LeaderCardList.module.scss
@@ -7,6 +7,10 @@
   display: flex;
   justify-content: center;
 
+  @include tablet {
+    // height: 100vh;
+  }
+
   &__grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -18,7 +22,12 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 20px;
       padding: 20px;
+      height: 100%;
+    }
+    
+    @include desktop {
       width: 80%;
+
     }
   }
 }
