--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -13,6 +13,7 @@ $color-white: #f2f1ee;
 $color-secondary: #dddddd;
 $color-accent: #888888;
 $color-dark: #0c0c0c;
+$color-button: #67a6dc;
 
 
 $breakpoint-tablet: 768px;
