--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,7 @@
 
 .header {
   width: 100%;
-  height: 25vh;
+  height: 40vh;
   background-color: rgba($color-secondary, 0.5);
   display: flex;
   justify-content: center;
@@ -11,6 +11,15 @@
   box-shadow: 0px 2px 5px 0px rgba(12, 12, 12, 0.25);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
+
+  a {
+    width: 100px;
+    text-decoration: none;
+
+    @include desktop {
+      width: 150px;
+    }
+  }
 
   &__text {
     width: 100%;
@@ -32,6 +41,17 @@
     &--title {
       padding-bottom: 10px;
       border-bottom: 1px solid $color-dark;
+
+      @include desktop {
+        font-size: 3rem;
+      }
+    }
+    
+    &--desc {
+      @include desktop {
+        font-size: 1.5rem;
+        width: 75%;
+      }
     }
   }
 }
