--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -24,7 +25,7 @@
   color: #67a6dc;
   cursor: pointer;
 }
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .button {
     border-radius: 20px;
     padding: 15px 40px;
