--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -20,7 +20,7 @@
     cursor: pointer;
   }
 
-  @include desktop {
+  @include tablet {
     border-radius: 20px;
     padding: 15px 40px;
     width: 150px;
