--- a/src/components/LeaderCard/LeaderCard.module.css
+++ b/src/components/LeaderCard/LeaderCard.module.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -24,6 +25,11 @@
 @media (min-width: 768px) {
   .leader-card {
     height: 22vh;
+  }
+}
+@media (min-width: 1024px) {
+  .leader-card {
+    height: 25vh;
   }
 }
 @media (min-width: 1200px) {
